--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Schat en Sleutel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bordspel MVP - Grote Room</title>
   </head>
   <body>
     <div id="root"></div>
